# livewall

./: .gitignore  Cargo.toml  LICENSE  README.md  build-release-package.ps1  build-release.ps1  icon.rc
.cargo/: config.toml
app/assets/: wallpaper.html
app/src/: config.rs  main.rs  monitor.rs  mpv.rs  paths.rs  picker.rs  tray.rs  wallpaper.rs
src/: weebp.exp  weebp.lib
