[package]
name = "live-wall"
version = "0.1.0"
edition = "2024"
license = "Unlicense"

[[bin]]
name = "live-wall"
path = "app/src/main.rs"

[dependencies]
anyhow = "1.0"
directories = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2.5"
webview2-com = "0.38"

[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Globalization",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
